tests/e2e/app_no_prop.error
Error: syntax error in story at line 1, column 5

1|    a = app.foobar
          ^^^^^^^^^^

E0151: Object `app` has no property `foobar`.
